potential fix for status bar dark mode not working

--- a/src/styles/common/_header.scss
+++ b/src/styles/common/_header.scss
@@ -3,12 +3,12 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 69px;
+  min-height: 69px;
   background: var(--footer-bg);
   backdrop-filter: blur(10px);
   border-top: 1px solid var(--border-color);
   z-index: 1000;
-  padding-bottom: calc(1rem + env(safe-area-inset-bottom));
+  padding-bottom: calc(env(safe-area-inset-bottom) - 10px);
 
   &__container {
     display: flex;
