--- a/src/styles/common/_listing.scss
+++ b/src/styles/common/_listing.scss
@@ -525,7 +525,7 @@
 
 .empty-state {
   text-align: center;
-  padding: 4rem 2rem;
+  padding: 4rem 2rem 5rem;
   color: var(--text-tertiary);
   h3 {
     color: var(--text-primary);
